# FinOpsGuard

./: .dockerignore  .flake8  .gitignore  AUDIT_LOGGING_SUMMARY.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENHANCED_ADMIN_UI_SUMMARY.md  LICENSE  MIGRATION_SUMMARY.md  MVP_PLUS_POLICY_ENGINE_SUMMARY.md  Makefile  PARSER_REFACTORING_SUMMARY.md  PYTHON_MIGRATION_SUMMARY.md  README.md  SESSION_SUMMARY.md  TERRAFORM_PARSER_ENHANCEMENT.md  USAGE_INTEGRATION_SUMMARY.md  alembic.ini  docker-compose.yml  env.example  eslint.config.mjs  fin_ops_guard_mcp_agent_requirements_document.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test-infrastructure.tf
.github/workflows/: ci.yml  finopsguard-check.yml  finopsguard-pr-comment.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_audit_logs.py  003_add_webhooks.py
deploy/: DEPLOYMENT_CHECKLIST.md  QUICK_START.md  TROUBLESHOOTING.md
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.yaml  (+2 more)
docs/: admin-ui-analytics.md  ansible-parsing.md  architecture.md  audit-logging.md  authentication.md  cicd-integration.md  database.md  deployment.md  integrations.md  pricing.md  terraform-parsing.md  usage-integration.md  webhooks.md
examples/: aws-infrastructure.tf  aws-infrastructure.yml  azure-infrastructure.tf  azure-infrastructure.yml  gcp-infrastructure.tf  gcp-infrastructure.yml  usage_integration_example.py
scripts/: db-manage.sh  finopsguard-cicd.sh
static/: index.html
(+126 files in other folders)
